--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "The Student Grade Table: Written in React",
   "main": "server/index.js",
   "scripts": {
-    "client": "webpack-dev-server",
-    "start": "node server/index.js",
+    "dev": "npm-run-all --silent --parallel dev:*",
+    "dev:client": "webpack-dev-server",
+    "dev:server": "nodemon server/index.js",
+    "db:import": "source .env; psql $DATABASE_URL < database/dump.sql",
+    "db:export": "source .env; pg_dump -c -O $DATABASE_URL > database/dump.sql",
     "build": "webpack --mode=production",
-    "dev": "npm-run-all --silent --parallel start client"
+    "start": "NODE_ENV=production node server/index.js"
   },
   "husky": {
     "hooks": {
