--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "json-server": "0.15.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "session-file-store": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
@@ -45,6 +47,7 @@
     "lint-staged": "9.5.0",
     "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
+        "session-file-store": "1.3.1",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
