--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "5.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.0",
@@ -49,7 +50,7 @@
     "lint-staged": "9.5.0",
     "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
-    "session-file-store": "1.3.1",
+    "session-file-store": "1.4.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
@@ -97,15 +98,6 @@
       "curly": [
         "error",
         "multi-line"
-      ],
-      "no-console": [
-        "error",
-        {
-          "allow": [
-            "warn",
-            "error"
-          ]
-        }
       ],
       "space-before-function-paren": [
         "error",
